# mick_robot_chasiss

./: README.md  Readme.txt  修改日志.txt  小车组装说明.md  更新日志.md  讨论群.txt
3D_Model/: Mick小车底盘-清单_20220210.xlsx
3D_Model_20220114/: 同步带.SLDPRT  同步轮张紧器.SLDPRT  导向轮.SLDPRT  张紧器.SLDASM  钢柱4x15x8.SLDPRT  铝底板-上.SLDPRT  铝底板-下.SLDPRT
3D_Model_20220114/2020型材/: 2020型材.SLDPRT  300.SLDPRT  320.SLDPRT  360.SLDPRT  438.SLDPRT  500.SLDPRT  572.SLDPRT  60.SLDPRT  扩展架.SLDASM  框架.SLDASM  直角铝.SLDPRT  角码.SLDPRT
3D_Model_20220114/标准件/: GB_CONNECTING_PIECE_RING_RRA 16.sldprt  GB_ROUND_WASHERS_TYPE7 3.sldprt  GB_ROUND_WASHERS_TYPE7 4.sldprt  m3x8.sldprt  m4x10.SLDPRT
3D_Model_20220114/轮胎模组/: CPJCK30-RD-10-10.SLDPRT  Rolling bearings 6000 GB 276-94.sldprt  m3508.SLDPRT  同步轮.SLDPRT  平键4x4x12.SLDPRT  平键5x5x35.SLDPRT  法兰.SLDPRT  轴.SLDPRT
Doc/: readme.txt
Libraries/CMSIS/: core_cm3.c
Listing/: startup_stm32f10x_hd.lst  ┴≈╦«╡╞.map
Output/: Template.hex  at24c02._2i  bmp180._2i  bsp_can.crf  bsp_can.d  bsp_uart.crf  bsp_uart.d  core_cm3._2i  core_cm3.crf  core_cm3.d  dbus.crf  dbus.d  dji_motor.crf  dji_motor.d  hmc5883._2i  iSO-STM32_Led.dep  imu._2i  io_iic._2i  kalman_filter._2i  lcd240x320_ili9341._2i  lcd240x320_touch._2i  main.crf  main.d  misc._2i  misc.crf  misc.d  mpu6050._2i  nrf_24l01._2i  scope_api._2i  sdio_sd._2i  seven_lab_miniimu._2i  speed_control.crf  speed_control.d  startup_stm32f10x_hd.d  stm32f10x_adc._2i  stm32f10x_adc.crf  stm32f10x_adc.d  stm32f10x_bkp._2i  stm32f10x_bkp.crf  stm32f10x_bkp.d  (+81 more)
PCB_File/控制板/: 1-PCB_PCB_Mickrobot.json  1-Schematic_Mickrobot.json  MickRobot-Controlor-V1.1.1-BOM表.xlsx
Project/RVMDKú¿uv4ú⌐/: JLinkLog.txt  Nu_Link_Driver.ini  iSO-STM32.uvgui.fire  iSO-STM32.uvguix.002  iSO-STM32.uvguix.Administrator  iSO-STM32.uvguix.RupingCen  iSO-STM32.uvopt  iSO-STM32.uvoptx  iSO-STM32.uvprojx
Project/RVMDK（uv4）/: iSO-STM32.uvgui.CRP  iSO-STM32.uvguix.Administrator  iSO-STM32.uvguix.RupingCen  iSO-STM32.uvoptx  iSO-STM32.uvprojx
ROS_Node/mick_bringup/: CMakeLists.txt  README.md  package.xml
ROS_Node/mick_bringup/include/: EKF_ODOM2D.h
ROS_Node/mick_bringup/launch/: mick4ws4wd_bringup.launch  mickm4_bringup.launch  mickrobot_v3.launch  mickx4_bringup.launch
ROS_Node/mick_bringup/rviz/: test_odom.rviz
ROS_Node/mick_bringup/scripts/: config.sh  mick.rules
ROS_Node/mick_bringup/src/: EKF_ODOM2D.cpp  chassis_mick_msg.h  mick_bringup.cpp  mickx4_bringup_v2.cpp  mickx4_bringup_v3.cpp
ROS_Node/mick_bringup/src/reference/: example_linux_serial_port.c  save_rgb_imu_from_kinect2.cpp
ROS_Node/mick_description/: CMakeLists.txt  package.xml
Reference/: ros_chasiss.cpp
Reference_Documents/01_固件下载/: 固件-V20240725-APSL2DB_80.hex  固件-V20240726-ZLAC8015D_65.hex
Reference_Documents/02_调试工具/: PCB.rar  USR-TCP232-Test-V1.3.cfg
Reference_Documents/电机M3508_C620电调/: M3508附件包_集线板.STEP
Reference_Documents/电机安普斯-电机手册/: L2DB指令.txt  安普斯伺服轮毂上位机V4.0.rar
Reference_Documents/调试工具/: USR-TCP232-Test-V1.3.cfg
Reference_Documents/遥控器-DT7/: 遥控器键值.txt
Reference_Documents/遥控器-RadioLink_T8FB/: 蓝牙版T8S-T8FB最新调参APP_V7.9.apk
STM32_Code/: ReadMe.txt
STM32_Code/Doc/: readme.txt  test_ETF_main.c
STM32_Code/Listing/: Project.map  startup_stm32f10x_hd.lst  startup_stm32f40xx.lst  流水灯.map
STM32_Code/Output/: Project.axf  Project.build_log.htm  Project.hex  Project.htm  Project.lnp  autoip.d  (+331 more)
User/: main.c  stm32f10x_conf.h  stm32f10x_it.c  stm32f10x_it.h
(+278 files in other folders)
